# nia

./: Dockerfile  README.md  coderabbit.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: chat.py  endpoints.py
app/core/: agent.py  checkpointer.py  config.py  db.py  models.py
app/schemas/: chat_history.py
app/services/: chat_service.py
app/static/: script.js  style.css
app/templates/: index.html
